remove sass file, change to readme, update home button click, create index_working file

--- a/_includes/decision2.html
+++ b/_includes/decision2.html
@@ -1,6 +1,6 @@
 <div class="div-container" id="{{ include.id }}">
 
-  <a next="first" class="div-logo-global w-inline-block move-button"><img src="images/title.svg"></a>
+  <a href="index.html" class="div-logo-global w-inline-block"><img src="images/title.svg"></a>
 
     <div class="div-dimmer" data-ix="dimmer"></div>
     <div class="div-title">
