--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,6 +1,6 @@
 <div id="{{ include.id }}" class="div-container">
 
-  <a next="first" class="div-logo-global w-inline-block move-button"><img src="images/title.svg"></a>
+  <a href="index.html" class="div-logo-global w-inline-block"><img src="images/title.svg"></a>
 
     <div class="div-dimmer intro"></div>
     <div class="div-title">
