--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/hhm-home-subsidies.webflow.css" rel="stylesheet" type="text/css">
-  <script src="https://use.typekit.net/qxy4pib.js" type="text/javascript"></script>
+  <!-- <script src="https://use.typekit.net/qxy4pib.js" type="text/javascript"></script> -->
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>  
@@ -109,7 +109,7 @@
   <script src="js/lib/jQuery.min.3.3.1.js"></script>
   
   <!-- From webflow's documents -->
-  <script src="js/webflow.js" type="text/javascript"></script>
+  <script src="js/webflow.js" type="text/javascript"></script> 
   
   <!-- From webflow's documents -->
   <!-- [if lte IE 9]><script src="js/lib/placeholders.min.js"></script><![endif] -->
