--- a/_includes/scenario1.html
+++ b/_includes/scenario1.html
@@ -27,7 +27,7 @@
               <div class="div-animation-trigger" data-ix="ani-2up-hide-{{ include.id }}"></div>
             </div>
             <div class="slide-outcome w-slide" data-ix="next-scene-trigger-{{ include.id }}">
-              <p class="p-scenario">You wonder if the easy commute and proximity to family make it worth moving to the new home anyway. <span class="span-question" data-ix="dramatic-pause">
+              <p class="p-scenario">You wonder if the easy commute and proximity to family make it worth moving to the new home anyway. <span class="span-question">
 
                 <a next="{{ include.next1 }}" class="a-inline move-button">What’s the right move?</a>
 
