--- a/_includes/decision1.html
+++ b/_includes/decision1.html
@@ -11,12 +11,12 @@
     </div>
     <div class="div-scenario">
       <div class="div-slide-area">
-        <a next="{{ include.next1 }}" class="div-decision-button w-inline-block move-button" data-ix="choice-1-appear">
+        <a next="{{ include.next1 }}" class="div-decision-button w-inline-block move-button choice-1">
           <div class="div-btn-decision-label">
             <div class="block-btn-decision-label">Move</div>
           </div>
         </a>
-        <a next="{{ include.next2 }}" class="div-decision-button w-inline-block move-button" data-ix="choice-2-appear">
+        <a next="{{ include.next2 }}" class="div-decision-button w-inline-block move-button choice-2">
           <div class="div-btn-decision-label">
             <div class="block-btn-decision-label">Stay</div>
           </div>
