--- a/_includes/decision2.html
+++ b/_includes/decision2.html
@@ -12,19 +12,19 @@
     <div class="div-scenario">
       <div class="div-slide-area">
         
-        <a next="{{ include.next1 }}" class="div-decision-button _3-up w-inline-block move-button" data-ix="choice-1-appear">
+        <a next="{{ include.next1 }}" class="div-decision-button choice-1 _3-up w-inline-block move-button">
           <div class="div-btn-decision-label">
             <div class="block-btn-decision-label _3up-label">Economize</div>
           </div>
         </a>
 
-        <a next="{{ include.next2 }}" class="div-decision-button _3-up w-inline-block move-button" data-ix="choice-2-appear">
+        <a next="{{ include.next2 }}" class="div-decision-button choice-2 _3-up w-inline-block move-button">
           <div class="div-btn-decision-label">
             <div class="block-btn-decision-label _3up-label">Move to a cheaper house</div>
           </div>
         </a>
 
-        <a next="{{ include.next3 }}" class="div-decision-button _3-up w-inline-block move-button" data-ix="choice-2-appear">
+        <a next="{{ include.next3 }}" class="div-decision-button choice-3 _3-up w-inline-block move-button">
           <div class="div-btn-decision-label">
             <div class="block-btn-decision-label _3up-label">Move in with a friend</div>
           </div>
