--- a/_includes/outcome1a.html
+++ b/_includes/outcome1a.html
@@ -84,7 +84,7 @@
       </div>
     </div>
     <div class="div-scenario-background"><img src="images/building-blue.svg" class="img-building-left"><img src="images/building-blue.svg" class="img-building-right-front"><img src="images/building-blue.svg" class="img-bulding-right-back"></div>
-    <div class="div-voucher-background t-{{ include.id }} on"></div>
+    <div class="div-voucher-background t-{{ include.id }}"></div>
     <div class="div-characters"><img src="images/ill-outcome1-choices.png" srcset="images/ill-outcome1-choices-p-500.png 500w, images/ill-outcome1-choices-p-800.png 800w, images/ill-outcome1-choices-p-1080.png 1080w, images/ill-outcome1-choices-p-1600.png 1600w, images/ill-outcome1-choices.png 1791w" sizes="(max-width: 2107px) 85vw, 1791px" class="img-s0-2-choices"><img src="images/ill-s1-2-doctor.png" srcset="images/ill-s1-2-doctor-p-500.png 500w, images/ill-s1-2-doctor.png 934w" sizes="25vw" class="img-2up-left t-{{ include.id }}" data-ix="illustration-hider"><img src="images/ill-s1-2-mother.png" class="img-2up-right t-{{ include.id }} mother" data-ix="illustration-hider"></div>
     <div class="div-global-background css-gradient">
       <div class="div-splitter"></div>
