--- a/_includes/scenario2.html
+++ b/_includes/scenario2.html
@@ -26,7 +26,7 @@
               <div class="div-animation-trigger" data-ix="ani-2up-hide-{{include.id}}"></div>
             </div>
             <div class="slide-outcome w-slide" data-ix="next-scene-trigger-{{include.id}}">
-              <p class="p-scenario">You wonder whether you can find other ways to cut spending and ride out this tough period.<a next="{{ include.next1 }}" class="move-button a-inline"><span class="span-question" data-ix="dramatic-pause">What’s the right move?</span></a></p>
+              <p class="p-scenario">You wonder whether you can find other ways to cut spending and ride out this tough period.<a next="{{ include.next1 }}" class="move-button a-inline"><span class="span-question" >What’s the right move?</span></a></p>
             </div>
           </div>
           <div class="arrow-left w-slider-arrow-left"><a href="#" class="slider-next-btn left w-inline-block"></a>
