--- a/_includes/decision3.html
+++ b/_includes/decision3.html
@@ -2,7 +2,7 @@
 
   <a href="index.html" class="div-logo-global w-inline-block"><img src="images/title.svg"></a>
     
-    <div class="div-dimmer" data-ix="dimmer-{{include.id}}"></div>
+    <div class="div-dimmer" data-ix="dimmer"></div>
     <div class="div-title">
       <div class="div-screen-title">
         <h2>A New Job, but Behind on Rent</h2>
@@ -11,12 +11,12 @@
     </div>
     <div class="div-scenario">
       <div class="div-slide-area">
-        <a next="{{ include.next1 }}" class="move-button div-decision-button w-inline-block" data-ix="choice-1-appear">
+        <a next="{{ include.next1 }}" class="move-button div-decision-button choice-1 w-inline-block">
           <div class="div-btn-decision-label">
             <div class="block-btn-decision-label">Negotiate with the landlord</div>
           </div>
         </a>
-        <a next="{{ include.next2 }}" class="move-button div-decision-button w-inline-block" data-ix="choice-2-appear">
+        <a next="{{ include.next2 }}" class="move-button div-decision-button choice-2 w-inline-block">
           <div class="div-btn-decision-label">
             <div class="block-btn-decision-label">Try to move</div>
           </div>
