--- a/_includes/outcome2b.html
+++ b/_includes/outcome2b.html
@@ -17,18 +17,15 @@
               <div class="div-animation-trigger" data-ix="ani-2up-scene-appear-{{ include.id }}"></div>
             </div>
             <div class="slide-outcome w-slide" data-ix="voucher-off-extra-{{ include.id }}">
-              <p class="p-scenario">more text<strong></strong></p>
+              <p class="p-scenario">You drop to part-time day care for the toddler to save money, but the longer commute means you’re often late for pick up. The extra commuting costs are also eating into your savings. You wonder if the move saved you any money at all.<strong></strong></p>
               <div class="div-animation-trigger" data-ix="ani-2up-hide-{{ include.id }}"></div>
             </div>
-            <div class="slide-outcome w-slide" data-ix="voucher-on-extra-{{ include.id }}">
-              <p class="p-scenario voucher-text" data-ix="remove-score-{{ include.id }}">Voucher text</p>
+            <div class="slide-outcome w-slide" data-ix="voucher-on-extra-{{include.id}}">
+              <p class="p-scenario voucher-text" data-ix="remove-score-{{include.id}}">When your boss cut your hours, you would have talked with the housing authority about how to reduce your share of the rent.</p>
               <div class="div-animation-trigger"></div>
             </div>
             <div class="slide-outcome w-slide">
-              <p class="p-scenario voucher-text">More voucher text</p>
-            </div>
-            <div class="slide-outcome w-slide">
-              <p class="p-scenario voucher-text">Even more voucher text</p>
+              <p class="p-scenario voucher-text">Thanks to the voucher’s income-based rents, you could have still afforded your rent, even if you had less money. Money would have still been tight, but you’d have made it through that tough period until work ramped up again.</p>
             </div>
             <div class="slide-outcome w-slide" data-ix="voucher-off-extra-{{ include.id }}">
               <p class="p-scenario"><a next="{{ include.next1 }}" class="move-button a-inline"><span class="span-question" data-ix="next-scene-trigger-{{ include.id }}">Now let’s see how you’d navigate one more choice for your family</span></a></p>
