add in conclusion

--- a/_includes/conclusion.html
+++ b/_includes/conclusion.html
@@ -24,25 +24,26 @@
               <div class="div-resource-rows w-row">
                 <div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
                   <ul class="ul-resource-links w-clearfix">
-                    <li class="li-item-resource">Lead exposure<span class="span-resources-arrow"></span></li>
-                    <li class="li-item-resource">Asthma<span class="span-resources-arrow"></span></li>
-                    <li class="li-item-resource">Job Retention<span class="span-resources-arrow"></span></li>
-                    <li class="li-item-resource">Effects of Financial Scarcity and Unaffordable Housing<span class="span-resources-arrow"></span></li>
+                    <li class="li-item-resource">Lead exposure<span class="span-resources-arrow"><a href="https://howhousingmatters.org/articles/low-income-families-children-live-hud-assisted-housing-lower-levels-lead-blood/" target="_blank"></a></span></li>
+                    <li class="li-item-resource">Asthma<span class="span-resources-arrow"><a href="https://www.urban.org/research/publication/relationship-between-housing-and-asthma-among-school-age-children" target="_blank"></a></span></li>
+                    <li class="li-item-resource">Job Retention<span class="span-resources-arrow"><a href="https://www.irp.wisc.edu/publications/dps/pdfs/dp130705.pdf" target="_blank"></a></span></li>
+                    <li class="li-item-resource">Effects of Financial Scarcity and Unaffordable Housing<span class="span-resources-arrow"><a href="https://www.tandfonline.com/doi/abs/10.1080/10511482.2014.899261" target="_blank"></a></span></li>
                   </ul>
                 </div>
                 <div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
                   <ul class="ul-resource-links w-clearfix">
-                    <li class="li-item-resource">Crowding and Child Well-being<span class="span-resources-arrow"></span></li>
-                    <li class="li-item-resource">Timing of Childhood Moves<span class="span-resources-arrow"></span></li>
-                    <li class="li-item-resource">Children and Eviction<span class="span-resources-arrow"></span></li>
-                    <li class="li-item-resource">Neighborhood Environmental Health<span class="span-resources-arrow"></span></li>
+                    <li class="li-item-resource">Crowding and Child Well-being<span class="span-resources-arrow"><a href="https://www.sciencedirect.com/science/article/pii/S0049089X11001694" target="_blank"></a></span></li>
+                    <li class="li-item-resource">Timing of Childhood Moves<span class="span-resources-arrow"><a href="https://howhousingmatters.org/articles/types-childhood-moves-worse-others/" target="_blank"></a></span></li>
+                    <li class="li-item-resource">Children and Eviction<span class="span-resources-arrow"><a href="https://academic.oup.com/sf/article-abstract/92/1/303/2235762" target="_blank"></a></span></li>
+                    <li class="li-item-resource">Neighborhood Environmental Health<span class="span-resources-arrow"><a href="https://www.sciencedirect.com/science/article/pii/S0049089X15001313" target="_blank"></a></span></li>
                   </ul>
                 </div>
                 <div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
                   <ul class="ul-resource-links w-clearfix">
-                    <li class="li-item-resource">Neighborhoods and School Quality<span class="span-resources-arrow"></span></li>
-                    <li class="li-item-resource">Voucher Discrimination<span class="span-resources-arrow"></span></li>
-                    <li class="li-item-resource">Lack of affordable housing<span class="span-resources-arrow"></span></li>
+                    <li class="li-item-resource">Neighborhoods and School Quality<span class="span-resources-arrow"><a href="https://howhousingmatters.org/articles/for-most-residential-mobility-does-not-lead-to-educational-opportunity/" target="_blank"></a></span></li>
+                    <li class="li-item-resource">Voucher Discrimination<span class="span-resources-arrow"><a href="https://www.mobilitypartnership.org/publications/assisted-housing-mobility-initiatives" target="_blank"></a></span></li>
+                    <li class="li-item-resource">Lack of affordable housing<span class="span-resources-arrow"><a href="http://apps.urban.org/features/rental-housing-crisis-map/" target="_blank"></a></span></li>
+                    <li class="li-item-resource">Economic progress for voucher households<span class="span-resources-arrow"><a href="https://howhousingmatters.org/articles/opportunities-asset-building-subsidized-housing/" target="_blank"></a></span></li>
                   </ul>
                 </div>
               </div>
