--- a/_includes/outcome3a.html
+++ b/_includes/outcome3a.html
@@ -16,18 +16,18 @@
               <div class="div-animation-trigger" data-ix="ani-2up-scene-appear-{{include.id}}"></div>
             </div>
             <div class="slide-outcome w-slide" data-ix="voucher-off-extra-{{include.id}}">
-              <p class="p-scenario">more text<strong></strong></p>
+              <p class="p-scenario">Two months later, a neighbor complains about your kids being noisy. The landlord tells you the deal is off and files for the past-due rent and late fees. You get a notice for eviction because you can’t cover that much money in time.<strong></strong></p>
               <div class="div-animation-trigger" data-ix="ani-2up-hide-{{include.id}}"></div>
             </div>
             <div class="slide-outcome w-slide" data-ix="voucher-on-extra-{{include.id}}">
-              <p class="p-scenario voucher-text" data-ix="remove-score-{{include.id}}">Voucher text</p>
+              <p class="p-scenario voucher-text" data-ix="remove-score-{{include.id}}">Even if you had faced a stretch of unemployment, you likely wouldn’t have been behind on rent. Your rent payments would have dropped to make things more manageable.</p>
               <div class="div-animation-trigger"></div>
             </div>
             <div class="slide-outcome w-slide">
-              <p class="p-scenario voucher-text">More voucher text</p>
+              <p class="p-scenario voucher-text">You could also have received guidance from housing authority staff about other emergency assistance resources or found out about special programs for improving your employment prospects to get back to work more quickly or shift into a career with better earnings and advancement potential.</p>
             </div>
             <div class="slide-outcome w-slide">
-              <p class="p-scenario voucher-text">Even more voucher text</p>
+              <p class="p-scenario voucher-text">When you did get that new job, your rent would go up again—but not beyond what you could comfortably pay. Most of your earnings would be yours to spend on your family’s other needs.</p>
             </div>
             <div class="slide-outcome w-slide" data-ix="voucher-off-extra-{{include.id}}">
               <p class="p-scenario"><a next="{{ include.next1 }}" class="move-button a-inline"><span class="span-question" data-ix="next-scene-trigger-{{include.id}}">Let&#x27;s see how those choices affected your family&#x27;s well-being</span></a></p>
