--- a/_includes/outcome3b.html
+++ b/_includes/outcome3b.html
@@ -16,18 +16,18 @@
               <div class="div-animation-trigger" data-ix="ani-2up-scene-appear-{{include.id}}"></div>
             </div>
             <div class="slide-outcome w-slide" data-ix="voucher-off-extra-{{include.id}}">
-              <p class="p-scenario">more text<strong></strong></p>
+              <p class="p-scenario">You decide your best bet is a home near an old industrial plant but just within the boundaries for a decent school. Your older child starts to suffer from frequent asthma attacks. Their wheezing and coughing keeps them up at night, and they often doze off in class. <strong></strong></p>
               <div class="div-animation-trigger" data-ix="ani-2up-hide-{{include.id}}"></div>
             </div>
             <div class="slide-outcome w-slide" data-ix="voucher-on-extra-{{include.id}}">
-              <p class="p-scenario voucher-text" data-ix="remove-score-{{include.id}}">Voucher text</p>
+              <p class="p-scenario voucher-text" data-ix="remove-score-{{include.id}}">Even if you had faced a stretch of unemployment, you likely wouldn’t have been behind on rent. Your rent payments would have dropped to make things more manageable.</p>
               <div class="div-animation-trigger"></div>
             </div>
             <div class="slide-outcome w-slide">
-              <p class="p-scenario voucher-text">More voucher text</p>
+              <p class="p-scenario voucher-text">You could also have received guidance from housing authority staff about other emergency assistance resources or found out about special programs for improving your employment prospects to get back to work more quickly or shift into a career with better earnings and advancement potential.</p>
             </div>
             <div class="slide-outcome w-slide">
-              <p class="p-scenario voucher-text">Even more voucher text</p>
+              <p class="p-scenario voucher-text">When you did get that new job, your rent would go up again—but not beyond what you could comfortably pay. Most of your earnings would be yours to spend on your family’s other needs.</p>
             </div>
             <div class="slide-outcome w-slide" data-ix="voucher-off-extra-{{include.id}}">
               <p class="p-scenario"><a next="{{ include.next1 }}" class="move-button a-inline"><span class="span-question" data-ix="next-scene-trigger-{{include.id}}">Let&#x27;s see how those choices affected your family&#x27;s well-being</span></a></p>
