--- a/_includes/conclusion.html
+++ b/_includes/conclusion.html
@@ -15,10 +15,10 @@
               <p data-w-id="fdbdffcd-4ab8-2745-161d-dbbef5e94ba6" class="p-scenario small">You tried to make the best decisions for your family. But as you navigated a new baby, lost pay, and a job change, you sacrificed health and education. Making the right move is hard when there isn’t enough decent affordable housing available to low-income families.</p>
             </div>
             <div class="slide-outcome w-slide">
-              <p class="p-scenario small">But housing vouchers are one of many tools that can make life&#x27;s ups and downs more manageable – and sometimes prevent those difficult situations from happening at all.</p>
+              <p class="p-scenario small">But housing vouchers are one of many tools that can make life’s ups and downs more manageable — and sometimes prevent those difficult situations from happening. </p>
             </div>
             <div class="slide-outcome w-slide">
-              <p class="p-scenario small">Check out these resources to learn more about the price families pay when the nation lacks affordable housing, and how discrimination against voucher holders can make voucher assistance less effective.</p>
+              <p class="p-scenario small">Check out these resources to learn more about the price families pay when the nation lacks affordable housing and how discrimination against voucher holders can make voucher assistance less effective.</p>
             </div>
             <div class="slide-outcome w-slide" data-ix="remove-score-{{include.id}}">
               <div class="div-resource-rows w-row">
