--- a/_includes/decision1.html
+++ b/_includes/decision1.html
@@ -5,7 +5,7 @@
     <div class="div-dimmer" data-ix="dimmer"></div>
     <div class="div-title">
       <div class="div-screen-title">
-        <h2>A Growing Family</h2>
+        <h2>A growing family</h2>
         <h1>What’s the right move?</h1>
       </div>
     </div>
