--- a/_includes/first.html
+++ b/_includes/first.html
@@ -6,8 +6,9 @@
 
       <a next="{{ include.next1 }}" class="btn-scenario w-button move-button">Play</a>
 
+      <!-- <img src="images/btn-start-blue.svg" class="img-start-btn"> -->
 
-      <img src="images/btn-start-blue.svg" class="img-start-btn"></div><img src="images/title.svg" alt="Right Moves" class="img-title"><img src="images/tagline.svg" alt="How does housing affect your goal of making a decent life for your family?" class="img-tagline">
+  	</div><img src="images/title.svg" alt="Right Moves" class="img-title"><img src="images/tagline.svg" alt="How does housing affect your goal of making a decent life for your family?" class="img-tagline">
     <div class="div-start-buildings"><img src="images/building-gold.svg" class="img-building-gold"><img src="images/building-red.svg" class="img-building-red"><img src="images/building-green.svg" class="img-building-green"><img src="images/building-blue.svg" class="img-building-blue"></div>
   </div>
   <div class="div-global-background css-gradient"></div>
