--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -16,11 +16,11 @@
             <p data-w-id="fdbdffcd-4ab8-2745-161d-dbbef5e94ba6" class="p-scenario">In this game, you are the head of a family with limited means and no government assistance. Your goal: make decisions to maximize your family’s education, health, and financial well-being.</p>
           </div>
           <div class="slide-outcome w-slide" data-ix="preview-score-{{ include.id }}">
-            <p class="p-scenario">After each choice, indicators at the bottom of the screen will show your results. Then you’ll see how the scenario might have been different if you had a housing voucher.</p>
+            <p class="p-scenario">After each choice, indicators at the top of the screen will show your results. Then you’ll see how the scenario might have been different if you had a housing voucher.
             <div class="div-animation-trigger"></div>
           </div>
           <div class="slide-outcome w-slide" data-ix="next-scene-trigger-{{ include.id }}">
-            <p class="p-scenario">To learn more about the results, stick around for resources at the end. <span class="span-question">
+            <p class="p-scenario">To learn more about the results, stick around for resources at the end.<span class="span-question">
 
               <a next="{{ include.next1 }}" class="a-inline move-button">Let&#x27;s get started!</a>
 
