--- a/_includes/outcome1a.html
+++ b/_includes/outcome1a.html
@@ -25,10 +25,10 @@
               <div class="div-animation-trigger"></div>
             </div>
             <div class="slide-outcome w-slide">
-              <p class="p-scenario voucher-text">This would give you a wider selection of homes if you wanted to move, but securing a decent home that takes vouchers in your desired neighborhood can still be challenging.</p>
+              <p class="p-scenario voucher-text">This would have given you a wider selection of homes if you wanted to move, but securing a decent home that takes vouchers in your desired neighborhood can still be challenging.</p>
             </div>
             <div class="slide-outcome w-slide">
-              <p class="p-scenario voucher-text">You would also be better able to accommodate the new baby if you decided to stay in your current home. The voucher’s safety net could let you quit your job or switch to part-time as you focused on finding a better job with a shorter commute.</p>
+              <p class="p-scenario voucher-text">You would also have been better able to accommodate the new baby if you had decided to stay in your current home. The voucher’s safety net could have let you quit your job or switch to part time as you focused on finding a better job with a shorter commute.</p>
             </div>
             <div class="slide-outcome w-slide" data-ix="voucher-off-extra-{{ include.id }}">
               <p class="p-scenario"><span class="span-question" data-ix="next-scene-trigger-{{ include.id }}">
