--- a/_includes/outcome1b.html
+++ b/_includes/outcome1b.html
@@ -13,21 +13,22 @@
         <div data-animation="outin" data-easing="ease-in-quad" data-hide-arrows="1" data-autoplay-limit="1" data-duration="500" data-infinite="1" class="slider-outcomes w-slider">
           <div class="w-slider-mask">
             <div class="slide-outcome w-slide">
-              <p data-w-id="fdbdffcd-4ab8-2745-161d-dbbef5e94ba6" class="p-scenario" data-ix="score-drop-{{include.id}}">It’s almost impossible to get to work on time and still drop the kids off at daycare and preschool. Your boss has put you on notice, and daycare late pickup fees are piling up.</p>
+              <p data-w-id="fdbdffcd-4ab8-2745-161d-dbbef5e94ba6" class="p-scenario" data-ix="score-drop-{{include.id}}">It’s almost impossible to get to work on time and drop the kids off at day care and preschool.Your boss has put you on notice, and day care late-pick-up fees are piling up.</p>
               <div class="div-animation-trigger" data-ix="ani-2up-scene-appear-{{include.id}}"></div>
             </div>
             <div class="slide-outcome w-slide" data-ix="voucher-off-extra-{{include.id}}">
               <p class="p-scenario">You’re sure that house wouldn’t have been safe and healthy for your family, but your worries about money are still weighing on you.</p>
               <div class="div-animation-trigger" data-ix="ani-2up-hide-{{include.id}}"></div>
             </div>
-            <div class="slide-outcome w-slide" data-ix="voucher-on-extra-{{include.id}}">
-              <p class="p-scenario voucher-text">Your options for balancing work and a new baby would be different. You would have talked to the housing authority about your growing family, and they could raise your rental price point (without raising your portion of the rent).</p>
+            <div class="slide-outcome w-slide" data-ix="voucher-on-extra-{{ include.id }}">
+              <p class="p-scenario voucher-text" data-ix="remove-score-{{ include.id }}">Your options for balancing work and a new baby would be different. You would have talked to the housing authority about your growing family, and they could raise your rental price point (without raising your portion of the rent).</p>
+              <div class="div-animation-trigger"></div>
             </div>
             <div class="slide-outcome w-slide">
-              <p class="p-scenario voucher-text">This would give you a wider selection of homes if you wanted to move, but securing a decent home that takes vouchers in your desired neighborhood can still be challenging.</p>
+              <p class="p-scenario voucher-text">This would have given you a wider selection of homes if you wanted to move, but securing a decent home that takes vouchers in your desired neighborhood can still be challenging.</p>
             </div>
             <div class="slide-outcome w-slide">
-              <p class="p-scenario voucher-text">You would also be better able to accommodate the new baby if you decided to stay in your current home. The voucher’s safety net could let you quit your job or switch to part-time as you focused on finding a better job with a shorter commute.</p>
+              <p class="p-scenario voucher-text">You would also have been better able to accommodate the new baby if you had decided to stay in your current home. The voucher’s safety net could have let you quit your job or switch to part time as you focused on finding a better job with a shorter commute.</p>
             </div>
             <div class="slide-outcome w-slide" data-ix="voucher-off-extra-{{include.id}}">
               <p class="p-scenario"><span class="span-question" data-ix="next-scene-trigger-{{include.id}}">
