--- a/_includes/scenario2.html
+++ b/_includes/scenario2.html
@@ -7,7 +7,7 @@
     <div class="div-title">
       <div class="div-screen-title">
         <h2>Choice 2</h2>
-        <h1>Hours Cuts at Work</h1>
+        <h1>Hours Cut at Work</h1>
       </div>
     </div>
     <div class="div-scenario">
@@ -22,7 +22,7 @@
               <p class="p-scenario">You need to figure out how to pay your rent with less money. You see a cheaper house. The quality looks decent, but it would add at least 30 minutes to your commute.</p>
             </div>
             <div class="slide-outcome w-slide">
-              <p class="p-scenario">A friend who lives near your job offers a spare bedroom, but that would be a tight fit for your family. </p>
+              <p class="p-scenario">A friend who lives near your job offers a spare bedroom, but that would be a tight fit for your family. You wonder whether you can find other ways to cut spending and ride out this tough period.</p>
               <div class="div-animation-trigger" data-ix="ani-2up-hide-{{include.id}}"></div>
             </div>
             <div class="slide-outcome w-slide" data-ix="next-scene-trigger-{{include.id}}">
