--- a/_includes/decision2.html
+++ b/_includes/decision2.html
@@ -5,7 +5,7 @@
     <div class="div-dimmer" data-ix="dimmer"></div>
     <div class="div-title">
       <div class="div-screen-title">
-        <h2>Hours cuts at work</h2>
+        <h2>Hours cut at work</h2>
         <h1>What’s the right move?</h1>
       </div>
     </div>
