--- a/_includes/decision3.html
+++ b/_includes/decision3.html
@@ -5,7 +5,7 @@
     <div class="div-dimmer" data-ix="dimmer"></div>
     <div class="div-title">
       <div class="div-screen-title">
-        <h2>A New Job, but Behind on Rent</h2>
+        <h2>A new job, but behind on rent</h2>
         <h1>What’s the right move?</h1>
       </div>
     </div>
