--- a/_includes/outcome3a.html
+++ b/_includes/outcome3a.html
@@ -4,7 +4,7 @@
     <div class="div-title">
       <div class="div-screen-title">
         <h2 class="heading">Your Choice</h2>
-        <h1>Negotiate With The Landlord</h1>
+        <h1>Negotiate with the landlord</h1>
       </div>
     </div>
     <div class="div-scenario">
@@ -16,7 +16,7 @@
               <div class="div-animation-trigger" data-ix="ani-2up-scene-appear-{{include.id}}"></div>
             </div>
             <div class="slide-outcome w-slide" data-ix="voucher-off-extra-{{include.id}}">
-              <p class="p-scenario">Two months later, a neighbor complains about your kids being noisy. The landlord tells you the deal is off and files for the past-due rent and late fees. You get a notice for eviction because you can’t cover that much money in time.<strong></strong></p>
+              <p class="p-scenario">The landlord tells you the deal is off and files for the past-due rent and late fees. You get a notice for eviction because you can’t cover that much money in time.<strong></strong></p>
               <div class="div-animation-trigger" data-ix="ani-2up-hide-{{include.id}}"></div>
             </div>
             <div class="slide-outcome w-slide" data-ix="voucher-on-extra-{{include.id}}">
