--- a/_includes/scenario3.html
+++ b/_includes/scenario3.html
@@ -6,7 +6,7 @@
     <div class="div-title">
       <div class="div-screen-title">
         <h2>Choice 3</h2>
-        <h1>A New Job, but Behind on Rent</h1>
+        <h1>A new job, but behind on rent</h1>
       </div>
     </div>
     <div class="div-scenario">
