--- a/_includes/outcome2b.html
+++ b/_includes/outcome2b.html
@@ -51,13 +51,13 @@
           <div class="t-meter-label">Health</div>
           <div class="div-meter-cell"><img src="images/score-sprite-health.svg" class="image-bullet-sprite"></div>
           <div class="div-meter-cell"><img src="images/score-sprite-health.svg" class="image-bullet-sprite"></div>
-          <div class="div-meter-cell"><img src="images/score-sprite-health.svg" class="image-bullet-sprite-empty t-{{include.id}}"></div>
+          <div class="div-meter-cell"><img src="images/score-sprite-health.svg" class="image-bullet-sprite t-{{include.id}}"></div>
         </div>
         <div class="div-meter-row">
           <div class="t-meter-label">Education</div>
           <div class="div-meter-cell"><img src="images/score-sprite-education.svg" class="image-bullet-sprite"></div>
           <div class="div-meter-cell"><img src="images/score-sprite-education.svg" class="image-bullet-sprite"></div>
-          <div class="div-meter-cell"><img src="images/score-sprite-education.svg" class="image-bullet-sprite-empty t-{{include.id}}"></div>
+          <div class="div-meter-cell"><img src="images/score-sprite-education.svg" class="image-bullet-sprite t-{{include.id}}"></div>
         </div>
         <div class="div-meter-row">
           <div class="t-meter-label">Financial</div>
