add final conclusion item

--- a/_includes/conclusion.html
+++ b/_includes/conclusion.html
@@ -12,7 +12,7 @@
         <div data-animation="outin" data-easing="ease-in-quad" data-hide-arrows="1" data-autoplay-limit="1" data-duration="500" data-infinite="1" class="slider-outcomes w-slider">
           <div class="w-slider-mask">
             <div class="slide-outcome w-slide">
-              <p data-w-id="fdbdffcd-4ab8-2745-161d-dbbef5e94ba6" class="p-scenario small">You tried to make the best decisions for your family. But as you navigated a new baby, lost pay, and a job change, you sacrificed health and education. Making the right move is hard when there isn’t enough decent affordable housing available to low-income families.</p>
+              <p data-w-id="fdbdffcd-4ab8-2745-161d-dbbef5e94ba6" class="p-scenario small">You tried to make the best decisions for your family. But as you navigated a new baby, lost pay, and a job change, you sacrificed your family's <span id="Injurylist"></span>. Making the right move is hard when there isn’t enough decent affordable housing available to low-income families.</p>
             </div>
             <div class="slide-outcome w-slide">
               <p class="p-scenario small">But housing vouchers are one of many tools that can make life’s ups and downs more manageable — and sometimes prevent those difficult situations from happening. </p>
@@ -49,11 +49,11 @@
               </div>
             </div>
           </div>
-          <div class="arrow-left w-slider-arrow-left"><a href="#" class="slider-next-btn left w-inline-block"></a>
+          <div class="arrow-left w-slider-arrow-left"><a class="slider-next-btn left w-inline-block"></a>
             <div class="slider-icon w-icon-slider-left"></div>
           </div>
           <div class="arrow-right w-slider-arrow-right">
-            <div class="slider-icon w-icon-slider-right"></div><a href="#" class="slider-next-btn w-inline-block" data-ix="next-btn-load"></a></div>
+            <div class="slider-icon w-icon-slider-right"></div><a class="slider-next-btn w-inline-block" data-ix="next-btn-load"></a></div>
           
             <!-- Why are these here and hidden? DW -->
           <a href="scenario1.html" class="arrow-right-last w-inline-block">
