--- a/_includes/outcome1b.html
+++ b/_includes/outcome1b.html
@@ -40,11 +40,11 @@
               <div class="div-animation-trigger" data-ix="ans02-hide-fam-{{include.id}}"></div>
             </div>
           </div>
-          <div class="arrow-left w-slider-arrow-left"><a href="#" class="slider-next-btn left w-inline-block"></a>
+          <div class="arrow-left w-slider-arrow-left"><a class="slider-next-btn left w-inline-block"></a>
             <div class="slider-icon w-icon-slider-left"></div>
           </div>
           <div class="arrow-right w-slider-arrow-right">
-            <div class="slider-icon w-icon-slider-right"></div><a href="#" class="slider-next-btn w-inline-block" data-ix="next-btn-load"></a></div>
+            <div class="slider-icon w-icon-slider-right"></div><a class="slider-next-btn w-inline-block" data-ix="next-btn-load"></a></div>
 
           <a next="{{ include.next1 }}" class="move-button arrow-right-last t-{{include.id}} w-inline-block">
             <div class="slider-next-btn"></div>
