--- a/_includes/scenario1.html
+++ b/_includes/scenario1.html
@@ -36,13 +36,13 @@
           </div>
           <div class="arrow-left w-slider-arrow-left">
             
-            <a href="#" class="slider-next-btn left w-inline-block"></a>
+            <a class="slider-next-btn left w-inline-block"></a>
 
             <div class="slider-icon w-icon-slider-left"></div>
           </div>
           <div class="arrow-right w-slider-arrow-right">
             
-            <a href="#" class="slider-next-btn w-inline-block" data-ix="next-btn-load"></a>
+            <a class="slider-next-btn w-inline-block" data-ix="next-btn-load"></a>
 
             <div class="slider-icon w-icon-slider-right"></div>
           </div>
