--- a/_includes/scenario2.html
+++ b/_includes/scenario2.html
@@ -29,10 +29,10 @@
               <p class="p-scenario">You wonder whether you can find other ways to cut spending and ride out this tough period.<a next="{{ include.next1 }}" class="move-button a-inline"><span class="span-question" >What’s the right move?</span></a></p>
             </div>
           </div>
-          <div class="arrow-left w-slider-arrow-left"><a href="#" class="slider-next-btn left w-inline-block"></a>
+          <div class="arrow-left w-slider-arrow-left"><a class="slider-next-btn left w-inline-block"></a>
             <div class="slider-icon w-icon-slider-left"></div>
           </div>
-          <div class="arrow-right w-slider-arrow-right"><a href="#" class="slider-next-btn w-inline-block" data-ix="next-btn-load"></a>
+          <div class="arrow-right w-slider-arrow-right"><a class="slider-next-btn w-inline-block" data-ix="next-btn-load"></a>
             <div class="slider-icon w-icon-slider-right"></div>
           </div>
           
