--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -32,13 +32,13 @@
         </div>
         <div class="arrow-left w-slider-arrow-left">
           
-          <a href="#" class="slider-next-btn left w-inline-block"></a>
+          <a class="slider-next-btn left w-inline-block"></a>
           <div class="slider-icon w-icon-slider-left"></div>
         </div>
         <div class="arrow-right w-slider-arrow-right">
 
           <!-- doesn't appear to be doing anything -->
-          <a href="#" class="slider-next-btn w-inline-block" data-ix="next-btn-load"></a>
+          <a class="slider-next-btn w-inline-block" data-ix="next-btn-load"></a>
           <div class="block-next">Next</div>
           <div class="slider-icon w-icon-slider-right"></div>
         </div>
