--- a/_includes/scenario3.html
+++ b/_includes/scenario3.html
@@ -28,10 +28,10 @@
               <p class="p-scenario">You consider moving, but you’re not sure you can find a better option with all the bad marks on your credit.<a next="{{ include.next1 }}" class="move-button a-inline"><span class="span-question" data-ix="dramatic-pause">What’s the right move?</span></a></p>
             </div>
           </div>
-          <div class="arrow-left w-slider-arrow-left"><a href="#" class="slider-next-btn left w-inline-block"></a>
+          <div class="arrow-left w-slider-arrow-left"><a class="slider-next-btn left w-inline-block"></a>
             <div class="slider-icon w-icon-slider-left"></div>
           </div>
-          <div class="arrow-right w-slider-arrow-right"><a href="#" class="slider-next-btn w-inline-block" data-ix="next-btn-load"></a>
+          <div class="arrow-right w-slider-arrow-right"><a class="slider-next-btn w-inline-block" data-ix="next-btn-load"></a>
             <div class="slider-icon w-icon-slider-right"></div>
           </div>
           <a next="{{ include.next1 }}" class="move-button arrow-right-last t-{{include.id}} w-inline-block">
