change <a> to div to see if that changes the mobile url bar intrusion issue

--- a/_includes/first.html
+++ b/_includes/first.html
@@ -4,7 +4,7 @@
     <div class="btn-start-back">
       
 
-      <a next="{{ include.next1 }}" class="btn-scenario w-button move-button active">Play</a>
+      <div next="{{ include.next1 }}" class="btn-scenario w-button move-button active">Play</div>
 
       <!-- <img src="images/btn-start-blue.svg" class="img-start-btn"> -->
 
