--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -22,7 +22,7 @@
           <div class="slide-outcome w-slide" data-ix="next-scene-trigger-{{ include.id }}">
             <p class="p-scenario">To learn more about the results, stick around for resources at the end.<span class="span-question">
 
-              <a next="{{ include.next1 }}" class="a-inline move-button">Let&#x27;s get started!</a>
+              <div next="{{ include.next1 }}" class="a-inline move-button">Let&#x27;s get started!</div>
 
             </span></p>
 
@@ -32,21 +32,21 @@
         </div>
         <div class="arrow-left w-slider-arrow-left">
           
-          <a class="slider-next-btn left w-inline-block"></a>
+          <div class="slider-next-btn left w-inline-block"></div>
           <div class="slider-icon w-icon-slider-left"></div>
         </div>
         <div class="arrow-right w-slider-arrow-right">
 
           <!-- doesn't appear to be doing anything -->
-          <a class="slider-next-btn w-inline-block" data-ix="next-btn-load"></a>
+          <div class="slider-next-btn w-inline-block" data-ix="next-btn-load"></div>
           <div class="block-next">Next</div>
           <div class="slider-icon w-icon-slider-right"></div>
         </div>
         
-        <a next="{{ include.next1 }}" class="arrow-right-last t-{{ include.id }} w-inline-block move-button">
+        <div next="{{ include.next1 }}" class="arrow-right-last t-{{ include.id }} w-inline-block move-button">
 
           <div class="slider-next-btn"></div>
-        </a>
+        </div>
         <div class="slide-nav w-slider-nav"></div>
       </div>
       <div class="div-slide-area"></div>
